EITI-407: Fix wrapping of extra long links inside user provided text.

--- a/public_html/sites/all/themes/eiti/styles/content.css.less
+++ b/public_html/sites/all/themes/eiti/styles/content.css.less
@@ -4,6 +4,10 @@
   .fieldable-panels-pane > & {
     margin: 0;
   }
+
+  a {
+    word-break: break-all;
+  }
 }
 
 .field {
